--- a/其他/浏览器性能.md
+++ b/其他/浏览器性能.md
@@ -16,3 +16,85 @@
 期待的解决方案包括：文件合并文件最小化/文件压缩使用CDN托管缓存的使用（多个域名来提供缓存）其他。
 
 ## 4.session与cookie
+
+## 5.多进程与多线程
+* 进程：程序的一次执行, 它占有一片独有的内存空间
+* 线程： CPU的基本调度单位, 是程序执行的一个完整流程
+* 进程与线程
+  * 一个进程中一般至少有一个运行的线程: 主线程
+  * 一个进程中也可以同时运行多个线程, 我们会说程序是多线程运行的
+  * 一个进程内的数据可以供其中的多个线程直接共享
+  * 多个进程之间的数据是不能直接共享的
+
+![img](../imgs/js/进程与线程.png)
+
+* 浏览器运行是单进程还是多进程?
+  * 有的是单进程
+    * firefox
+    * 老版IE
+  * 有的是多进程
+    * chrome
+    * 新版IE
+* 如何查看浏览器是否是多进程运行的呢?
+  * 任务管理器==>进程
+* 浏览器运行是单线程还是多线程?
+  * 都是多线程运行的
+
+## 6.浏览器内核
+* 什么是浏览器内核?
+  * 支持浏览器运行的最核心的程序
+* 不同的浏览器可能不太一样
+  * Chrome, Safari: webkit
+  * firefox: Gecko
+  * IE: Trident
+  * 360,搜狗等国内浏览器: Trident + webkit
+* 内核由很多模块组成
+  * html,css文档解析模块 : 负责页面文本的解析
+  * dom/css模块 : 负责dom/css在内存中的相关处理
+  * 布局和渲染模块 : 负责页面的布局和效果的绘制
+  * 定时器模块 : 负责定时器的管理
+  * 网络请求模块 : 负责服务器请求(常规/Ajax)
+  * 事件响应模块 : 负责事件的管理
+
+## 7.事件循环模型
+* 所有代码分类
+  * 初始化执行代码(同步代码): 包含绑定dom事件监听, 设置定时器, 发送ajax请求的代码
+  * 回调执行代码(异步代码): 处理回调逻辑
+* js引擎执行代码的基本流程:
+  * 初始化代码===>回调代码
+* 模型的2个重要组成部分:
+  * 事件管理模块
+  * 回调队列
+* 模型的运转流程
+  * 执行初始化代码, 将事件回调函数交给对应模块管理
+  * 当事件发生时, 管理模块会将回调函数及其数据添加到回调列队中
+  * 只有当初始化代码执行完后(可能要一定时间), 才会遍历读取回调队列中的回调函数执行
+
+![image](../imgs/js/事件循环模型.png)
+
+### 宏任务与微任务
+来源：掘金
+[微任务、宏任务与Event-Loop](https://juejin.im/post/5b73d7a6518825610072b42b#heading-0)
+
+在异步代码中存在宏任务与微任务，微任务总是在宏任务之前执行。
+```javascript
++setTimeout(_ => {
+-  console.log(4)
++})
+
++new Promise(resolve => {
++  resolve()
++  console.log(1)
++}).then(_ => {
+-  console.log(3)
++})
+
++console.log(2)
+```
+
+` setTimeout`就是作为宏任务来存在的，而`Promise.then`则是具有代表性的微任务，上述代码的执行顺序就是按照序号来输出的。
+所有会进入的异步都是指的事件回调中的那部分代码
+也就是说`new Promise`在实例化的过程中所执行的代码都是同步进行的，而then中注册的回调才是异步执行的。
+在同步代码执行完成后才回去检查是否有异步任务完成，并执行对应的回调，而微任务又会在宏任务之前执行。
+所以就得到了上述的输出结论1、2、3、4。
+
